# ingenious-aux

prompt-tuner/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
prompt-tuner/app/: app.py  index.html
prompt-tuner/app/pages/: index.html
prompt-tuner/app/static/css/: evaluation.css  style.css  workflow-process.css
prompt-tuner/app/static/js/: api.js  apiConfig.js  app.js  array-manager.js  base-manager.js  display-utils.js  dynamic-workflow.js  json-response-builder.js  manage-prompt.js  prompt-evaluation-app.js  prompt-evaluation-core.js  workflow-process-original.js  workflow-process.js
prompt-tuner/app/static/js/components/: app.js  prompt-evaluation-app.js  prompt-evaluation-core.js  workflow-process.js
prompt-tuner/app/static/js/manager/: data-manager.js  dynamic-workflow.js
prompt-tuner/app/static/js/utils/: json-response-builder.js  validation-utils.js
prompt-tuner/app/templates/: _footer.html  evaluation.html  index.html  manage-prompt.html  results.html  workflow-process.html
prompt-tuner/app/utils/: __init__.py  app_info.py
prompt-tuner/docs/: user-guide.md
